--- a/EP_12_turtle/파이썬 12강 터틀.ipynb
+++ b/EP_12_turtle/파이썬 12강 터틀.ipynb
@@ -2,14 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#https://opentechschool.github.io/python-beginners/ko/simple_drawing.html\n",
     "import turtle\n",
     "turtle.setposition(0,200)\n",
     "turtle.pencolor('red')\n",
     "turtle.forward(200)\n",
+    "turtle.exitonclick()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import turtle\n",
+    "\n",
+    "turtle.shape(\"turtle\")\n",
+    "\n",
+    "turtle.forward(25)\n",
+    "\n",
     "turtle.exitonclick()"
    ]
   },
@@ -42,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,6 +318,29 @@
     "   john.right(90)\n",
     "   draw_square(john, fibno*5)\n",
     "   prev, fibno = fibno, fibno+prev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import turtle as t\n",
+    "colors = [\"blue\", \"green\", \"purple\", \"cyan\", \"magenta\", \"violet\"]\n",
+    "for angle in range(0,360,15):\n",
+    "    t.seth(angle)\n",
+    "    t.circle(100)\n",
+    "t.reset()\n",
+    "for i in range(45):\n",
+    "    t.color(colors[i%6])\n",
+    "    t.pendown()\n",
+    "    t.fd(2+i*5)\n",
+    "    t.left(45)\n",
+    "    t.width(i)\n",
+    "    t.penup()\n",
+    "t.update()\n",
+    "t.done()"
    ]
   },
   {
