--- a/EP_10_file_input_output/파이썬 10강 파일의 입력과 출력.ipynb
+++ b/EP_10_file_input_output/파이썬 10강 파일의 입력과 출력.ipynb
@@ -556,6 +556,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "_io.BufferedReader"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = open('logo.gif','rb')\n",
+    "type(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
